--- a/store/package.json
+++ b/store/package.json
@@ -12,6 +12,7 @@
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
+    "expo-font": "latest",
     "react-native": "0.69.6"
   },
   "devDependencies": {
